<resources>
    <string name="app_name">Bootcamp</string>
    <string name="default_text">Hello World!</string>


    <string name="first_name_field">Enter First Name</string>
    <string name="last_name_field">Enter Last Name</string>
    <string name="start_button_text">Start</string>

    <string name="number_field">Guess A Number(1-10)</string>
    <string name="answer_button">Guess</string>

    <string name="win_message">Congratulations!</string>
    <string name="new_game">New Game</string>
    <string name="share_results">Share</string>

    <string name="lose_message">Game Over!</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
