<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".fragments.WinScreenFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/register_padding">


        <TextView
                android:id="@+id/winMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/register_form_margin"
                android:hint="@string/win_message"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textAlignment="center"
                android:textSize="@dimen/message_font_size" />


        <Button
                android:id="@+id/newGame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/register_form_margin"
                android:text="@string/new_game"
                app:layout_constraintEnd_toStartOf="@id/share"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/winMessage" />

        <Button
                android:id="@+id/share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/register_form_margin"
                android:text="@string/share_results"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/newGame"
                app:layout_constraintTop_toBottomOf="@id/winMessage" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>