<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".fragments.RegisterFragment">

    <data>
        <variable
                name="player"
                type="com.self.admin.bootcamp.Player" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/register_padding">


        <EditText
                android:singleLine="true"
                android:id="@+id/firstNameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/register_form_margin"
                android:hint="@string/first_name_field"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@={player.firstName}"/>


        <EditText
                android:singleLine="true"
                android:id="@+id/lastNameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/register_form_margin"
                android:hint="@string/last_name_field"
                app:layout_constraintTop_toBottomOf="@id/firstNameInput"
                android:text="@={player.lastName}"/>

        <Button
                android:id="@+id/startButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/register_form_margin"
                android:text="@string/start_button_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lastNameInput" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>